1. make the index page responsive 2. fix the footer not showing correctly when it is in mobile mode 3. compress the images used in index page to be smaller (almost accounted to 80% of reduction)

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,7 +1,7 @@
 footer {
   background-color: #2e7eed;
   width: 100%;
-  height: 120px;
+  /* height: 120px; */
   color: white;
 }
 
