--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,16 +3,21 @@
   color: black;
   position: fixed;
   width: 100%;
-  z-index: 10;
+  z-index: 100;
   box-sizing: border-box;
   background-color: white;
   top: 0;
   left: 0;
   font-family: 'Open Sans', sans-serif;
+  height: var(--header-height);
+}
+
+.header-content {
+  width: 100%;
+  padding: 20px;
 }
 
 .transparent {
-  color: black;
   background-color: transparent;
 }
 
@@ -25,5 +30,28 @@
 
 .header .current {
   font-weight: 700;
-  /* color: #663399; */
+}
+
+@media (min-width: 700px) {
+  .navbar-toggle {
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  .nav-menu {
+    display: none;
+  }
+
+  .nav-mobile {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    right: 0;
+    top: 0;
+    width: 50%;
+    height: 100vh;
+    background-color: white;
+    padding: 30px 0;
+  }
 }
