--- a/src/components/root.css
+++ b/src/components/root.css
@@ -1,5 +1,7 @@
 * {
   margin: 0;
+  --header-height: 4.1rem;
+  --footer-height: 8rem;
 }
 html,
 body,
@@ -17,6 +19,17 @@ body,
 footer,
 .push {
   height: 120px; /* .push must be the same height as .footer */
+}
+
+@media (max-width: 600px) {
+  .wrapper {
+    margin: 0 auto -165px;
+  }
+
+  footer,
+  .push {
+    height: 165px;
+  }
 }
 
 .section-content {
